# searchlores

./: DeepSeek-10Lores.md  LICENSE  Qwen-10Lores.md  README.md  demo_ultimate.py  pyproject.toml  tuto-DepSeek.md
cli/: main.py
core/: context.py  engine.py
examples/: prompt_01.txt  prompt_01a.txt  prompt_02.txt  prompt_02a.txt  prompt_03a.txt
lore/: loader.py  models.py
lores/: llm.lore  worldbuilding.lore
plugins/: base.py
plugins/builtin/: authority.py
searchlores/archaeology/: __init__.py  prompt.py
searchlores/cli/: main.py
searchlores/core/: context.py  engine.py  report.py
searchlores/expeditions/: __init__.py
searchlores/graph/: graphviz.py  mermaid.py  searchmap.py
searchlores/lore/: __init__.py  loader.py  models.py  validator.py
searchlores/plugins/: base.py  manager.py
searchlores/plugins/builtin/: __init__.py  assumptions.py  authority.py  contradictions.py
searchlores/plugins/experimental/: __init__.py
tests/: test_engine.py  test_loader.py  test_plugins.py
