[project]
name = "searchlores"
version = "0.1.0"
description = "Fravian Cognitive Archaeology Framework"
authors = [
    {name = "Searchlores Academy"}
]

requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.8",
    "networkx>=3.3",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "jinja2>=3.1"
]

[project.scripts]
searchlores = "searchlores.cli.main:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"